tests/snapshots/approved__configuration_yaml.snap
---
source: tests/approved.rs
expression: default_config_file_content
---
MainBranch: ^(trunk|main|master)$
ReleaseBranch: ^releases?[/-](?<BranchName>.+)$
FeatureBranch: ^features?[/-](?<BranchName>.+)$
TagPrefix: '[vV]?'
PreReleaseTag: pre
CommitMessageIncrementing: Disabled
AssemblyInformationalFormat: '{InformationalVersion}'
