tests/snapshots/approved__environment_variable_output_in_gitlab_context.snap
---
source: tests/approved.rs
assertion_line: 146
expression: gitlab_env
---
GitVersion_AssemblySemFileVer=0.1.0.55001
GitVersion_AssemblySemVer=0.1.0.0
GitVersion_BranchName=trunk
GitVersion_BuildMetadata=
GitVersion_CommitDate=####-##-##
GitVersion_CommitDay=##
GitVersion_CommitMonth=##
GitVersion_CommitYear=####
GitVersion_CommitsSinceVersionSource=0
GitVersion_EscapedBranchName=trunk
GitVersion_FullBuildMetaData=
GitVersion_FullSemVer=0.1.0-pre.1
GitVersion_InformationalVersion=0.1.0-pre.1
GitVersion_Major=0
GitVersion_MajorMinorPatch=0.1.0
GitVersion_MajorMinorPatchVersionSourceSha=
GitVersion_Minor=1
GitVersion_Patch=0
GitVersion_PreReleaseLabel=pre
GitVersion_PreReleaseLabelWithDash=-pre
GitVersion_PreReleaseNumber=1
GitVersion_PreReleaseTag=pre.1
GitVersion_PreReleaseTagWithDash=-pre.1
GitVersion_SemVer=0.1.0-pre.1
GitVersion_Sha=########################################
GitVersion_ShortSha=#######
GitVersion_UncommittedChanges=0
GitVersion_VersionSourceSha=
GitVersion_WeightedPreReleaseNumber=55001
GitVersion_YearMinor=0
