tests/snapshots/approved__environment_variable_output_in_teamcity_context.snap
---
source: tests/approved.rs
expression: teamcity_output
---
##teamcity[setParameter name='GitVersion.AssemblySemFileVer' value='0.1.0.55001']
##teamcity[setParameter name='system.GitVersion.AssemblySemFileVer' value='0.1.0.55001']
##teamcity[setParameter name='GitVersion.AssemblySemVer' value='0.1.0.0']
##teamcity[setParameter name='system.GitVersion.AssemblySemVer' value='0.1.0.0']
##teamcity[setParameter name='GitVersion.BranchName' value='trunk']
##teamcity[setParameter name='system.GitVersion.BranchName' value='trunk']
##teamcity[setParameter name='GitVersion.BuildMetadata' value='']
##teamcity[setParameter name='system.GitVersion.BuildMetadata' value='']
##teamcity[setParameter name='GitVersion.CalVerDay' value='09']
##teamcity[setParameter name='system.GitVersion.CalVerDay' value='09']
##teamcity[setParameter name='GitVersion.CalVerMinor' value='1']
##teamcity[setParameter name='system.GitVersion.CalVerMinor' value='1']
##teamcity[setParameter name='GitVersion.CalVerMonth' value='03']
##teamcity[setParameter name='system.GitVersion.CalVerMonth' value='03']
##teamcity[setParameter name='GitVersion.CalVerYear' value='2024']
##teamcity[setParameter name='system.GitVersion.CalVerYear' value='2024']
##teamcity[setParameter name='GitVersion.CommitDate' value='2024-03-09']
##teamcity[setParameter name='system.GitVersion.CommitDate' value='2024-03-09']
##teamcity[setParameter name='GitVersion.CommitDay' value='09']
##teamcity[setParameter name='system.GitVersion.CommitDay' value='09']
##teamcity[setParameter name='GitVersion.CommitMonth' value='03']
##teamcity[setParameter name='system.GitVersion.CommitMonth' value='03']
##teamcity[setParameter name='GitVersion.CommitYear' value='2024']
##teamcity[setParameter name='system.GitVersion.CommitYear' value='2024']
##teamcity[setParameter name='GitVersion.CommitsSinceVersionSource' value='0']
##teamcity[setParameter name='system.GitVersion.CommitsSinceVersionSource' value='0']
##teamcity[setParameter name='GitVersion.EscapedBranchName' value='trunk']
##teamcity[setParameter name='system.GitVersion.EscapedBranchName' value='trunk']
##teamcity[setParameter name='GitVersion.FullBuildMetaData' value='']
##teamcity[setParameter name='system.GitVersion.FullBuildMetaData' value='']
##teamcity[setParameter name='GitVersion.FullSemVer' value='0.1.0-pre.1']
##teamcity[setParameter name='system.GitVersion.FullSemVer' value='0.1.0-pre.1']
##teamcity[setParameter name='GitVersion.InformationalVersion' value='0.1.0-pre.1']
##teamcity[setParameter name='system.GitVersion.InformationalVersion' value='0.1.0-pre.1']
##teamcity[setParameter name='GitVersion.Major' value='0']
##teamcity[setParameter name='system.GitVersion.Major' value='0']
##teamcity[setParameter name='GitVersion.MajorMinorPatch' value='0.1.0']
##teamcity[setParameter name='system.GitVersion.MajorMinorPatch' value='0.1.0']
##teamcity[setParameter name='GitVersion.MajorMinorPatchVersionSourceSha' value='']
##teamcity[setParameter name='system.GitVersion.MajorMinorPatchVersionSourceSha' value='']
##teamcity[setParameter name='GitVersion.Minor' value='1']
##teamcity[setParameter name='system.GitVersion.Minor' value='1']
##teamcity[setParameter name='GitVersion.Patch' value='0']
##teamcity[setParameter name='system.GitVersion.Patch' value='0']
##teamcity[setParameter name='GitVersion.PreReleaseLabel' value='pre']
##teamcity[setParameter name='system.GitVersion.PreReleaseLabel' value='pre']
##teamcity[setParameter name='GitVersion.PreReleaseLabelWithDash' value='-pre']
##teamcity[setParameter name='system.GitVersion.PreReleaseLabelWithDash' value='-pre']
##teamcity[setParameter name='GitVersion.PreReleaseNumber' value='1']
##teamcity[setParameter name='system.GitVersion.PreReleaseNumber' value='1']
##teamcity[setParameter name='GitVersion.PreReleaseTag' value='pre.1']
##teamcity[setParameter name='system.GitVersion.PreReleaseTag' value='pre.1']
##teamcity[setParameter name='GitVersion.PreReleaseTagWithDash' value='-pre.1']
##teamcity[setParameter name='system.GitVersion.PreReleaseTagWithDash' value='-pre.1']
##teamcity[setParameter name='GitVersion.SemVer' value='0.1.0-pre.1']
##teamcity[setParameter name='system.GitVersion.SemVer' value='0.1.0-pre.1']
##teamcity[setParameter name='GitVersion.Sha' value='########################################']
##teamcity[setParameter name='system.GitVersion.Sha' value='########################################']
##teamcity[setParameter name='GitVersion.ShortSha' value='#######']
##teamcity[setParameter name='system.GitVersion.ShortSha' value='#######']
##teamcity[setParameter name='GitVersion.UncommittedChanges' value='0']
##teamcity[setParameter name='system.GitVersion.UncommittedChanges' value='0']
##teamcity[setParameter name='GitVersion.VersionSourceSha' value='']
##teamcity[setParameter name='system.GitVersion.VersionSourceSha' value='']
##teamcity[setParameter name='GitVersion.WeightedPreReleaseNumber' value='55001']
##teamcity[setParameter name='system.GitVersion.WeightedPreReleaseNumber' value='55001']
