tests/snapshots/approved__help_text.snap
---
source: tests/approved.rs
info:
  program: git-versioner
  args:
    - "-h"
---
success: true
exit_code: 0
----- stdout -----
A tool to manage versions of git repositories using conventional commits and semantic versioning

Usage: git-versioner [OPTIONS]

Options:
  -p, --path <PATH>
          Path to the repository to calculate the version for
      --main-branch <MAIN_BRANCH>
          Regex to detect the main branch
      --release-branch <RELEASE_BRANCH>
          Regex to detect the release branch(es)
      --feature-branch <FEATURE_BRANCH>
          Regex to detect the feature branch(es)
      --tag-prefix <TAG_PREFIX>
          Regex to detect version tag(s)
      --pre-release-tag <PRE_RELEASE_TAG>
          Label used to mark pre-release versions (e.g., pre, alpha, beta, rc, etc.), default: pre
      --patch-pre-release-tag <PATCH_PRE_RELEASE_TAG>
          Label to be used to mark patch (Patch > 0) pre-release versions (e.g., rc, hotfix, patch, etc.), default: <PRE_RELEASE_TAG> 
      --continuous-delivery
          Calculate version using continuous delivery mode
      --commit-message-incrementing <COMMIT_MESSAGE_INCREMENTING>
          Increment based on conventional commits ('Disabled' (default) or 'Enabled')
      --assembly-informational-format <ASSEMBLY_INFORMATIONAL_FORMAT>
          Format string for InformationalVersion output
  -a, --as-release
          Forces release generation instead of pre-release
      --show-config
          Print effective configuration and exit
  -v, --verbose
          Print the effective configuration before calculating the version
  -c, --config <CONFIG_FILE>
          Path to a configuration file (TOML or YAML)
  -h, --help
          Print help (see more with '--help')
  -V, --version
          Print version

----- stderr -----
