tests/snapshots/approved__output_from_feature_branch.snap
---
source: tests/approved.rs
info:
  program: git-versioner
  args: []
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 0,
  "Minor": 1,
  "Patch": 0,
  "PreReleaseTag": "my-feature.1",
  "PreReleaseTagWithDash": "-my-feature.1",
  "PreReleaseLabel": "my-feature",
  "PreReleaseLabelWithDash": "-my-feature",
  "PreReleaseNumber": 1,
  "WeightedPreReleaseNumber": 30001,
  "BuildMetadata": "",
  "FullBuildMetaData": "",
  "MajorMinorPatch": "0.1.0",
  "SemVer": "0.1.0-my-feature.1",
  "AssemblySemVer": "0.1.0.0",
  "AssemblySemFileVer": "0.1.0.30001",
  "InformationalVersion": "0.1.0-my-feature.1",
  "FullSemVer": "0.1.0-my-feature.1",
  "BranchName": "feature/my-feature",
  "EscapedBranchName": "feature-my-feature",
  "Sha": "########################################",
  "ShortSha": "#######",
  "VersionSourceSha": "",
  "MajorMinorPatchVersionSourceSha": "",
  "CommitsSinceVersionSource": 0,
  "CommitDate": "2024-03-09",
  "CommitYear": "2024",
  "CommitMonth": "03",
  "CommitDay": "09",
  "YearMinor": 1,
  "UncommittedChanges": 0
}

----- stderr -----
