tests/snapshots/approved__output_from_main_branch.snap
---
source: tests/approved.rs
info:
  program: git-versioner
  args: []
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 0,
  "Minor": 1,
  "Patch": 0,
  "PreReleaseTag": "pre.1",
  "PreReleaseTagWithDash": "-pre.1",
  "PreReleaseLabel": "pre",
  "PreReleaseLabelWithDash": "-pre",
  "PreReleaseNumber": 1,
  "WeightedPreReleaseNumber": 55001,
  "BuildMetadata": "",
  "FullBuildMetaData": "",
  "MajorMinorPatch": "0.1.0",
  "SemVer": "0.1.0-pre.1",
  "AssemblySemVer": "0.1.0.0",
  "AssemblySemFileVer": "0.1.0.55001",
  "InformationalVersion": "0.1.0-pre.1",
  "FullSemVer": "0.1.0-pre.1",
  "BranchName": "trunk",
  "EscapedBranchName": "trunk",
  "Sha": "########################################",
  "ShortSha": "#######",
  "VersionSourceSha": "",
  "MajorMinorPatchVersionSourceSha": "",
  "CommitsSinceVersionSource": 0,
  "CommitDate": "2024-03-09",
  "CommitYear": "2024",
  "CommitMonth": "03",
  "CommitDay": "09",
  "CalVerYear": "2024",
  "CalVerMonth": "03",
  "CalVerDay": "09",
  "CalVerMinor": 1,
  "UncommittedChanges": 0
}

----- stderr -----
